Make forge run with java 16 because of loom...