@@ -51,12 +51,6 @@ tasks.withType(JavaCompile).configureEach {
     }
 }
 
-tasks.withType(JavaExec).configureEach {
-    javaLauncher.set(javaToolchains.launcherFor {
-        it.languageVersion = JavaLanguageVersion.of(MINECRAFT_JAVA_VERSION.asInt())
-    })
-}
-
 // </editor-fold>
 
 sourceSets {
@@ -91,11 +85,13 @@ loom {
 
     runs {
         client {
-            vmArgs.add('-XX:+IgnoreUnrecognizedVMOptions')
+            vmArgs(['--add-exports=java.base/sun.security.util=ALL-UNNAMED',
+                    '--add-opens=java.base/java.util.jar=ALL-UNNAMED'])
         }
 
         server {
-            vmArgs.add('-XX:+IgnoreUnrecognizedVMOptions')
+            vmArgs(['--add-exports=java.base/sun.security.util=ALL-UNNAMED',
+                    '--add-opens=java.base/java.util.jar=ALL-UNNAMED'])
         }
     }
 }
